src/test/deca/context/valid/assign_cont_01.deca
// Description:
//    Programme definissant la variable entière x puis l'assigne.
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

{
    int x = y;
}
