src/test/deca/context/invalid/bool_op_mismatch.deca
// Description:
//     Operateur binaire avec mauvais types.
//
// Resultats:
//    Ligne 11: Boolean operation type mismatch
//
// Historique:
//    cree le 01/01/2023

{
   boolean x = 4 && true;
}
